Fix for code submission overflow.

--- a/static/scss/main/submission_list.scss
+++ b/static/scss/main/submission_list.scss
@@ -309,6 +309,10 @@
 
         .user_formatted {
             padding: 15px 20px;
+
+            pre {
+                overflow-x: scroll;
+            }
         }
 
         .unit_number {
